added crudbar, started on employee

--- a/Client/src/app/products/products.component.html
+++ b/Client/src/app/products/products.component.html
@@ -1,8 +1,9 @@
+<app-crudbar></app-crudbar>
 <div class="row">
-    <div class="col-md-6 p-5">
-      <app-productDetail></app-productDetail>
-    </div>
-    <div class="col-md-6 p-5">
-      <app-productList></app-productList>
-    </div>
+  <div class="col-md-6 p-5">
+    <app-productDetail></app-productDetail>
   </div>
+  <div class="col-md-6 p-5">
+    <app-productList></app-productList>
+  </div>
+</div>
