--- a/Client/src/app/core/nav/nav.component.html
+++ b/Client/src/app/core/nav/nav.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Business Partners</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Employees</a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username">
