--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -1,1 +1,9 @@
 <app-crudbar></app-crudbar>
+<form>
+    <div class="form-group row">
+        <label for="employeeEmail" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="text" readonly class="form-control-plaintext" id="employeeEmail" value="email@example.com">
+        </div>
+    </div>
+</form>
