crudbar to form

--- a/Client/src/app/crudbar/crudbar.component.html
+++ b/Client/src/app/crudbar/crudbar.component.html
@@ -1,12 +1,6 @@
-<div class="row p-2 mx-5">
-  <div class="col-md-2 text-center">
-    <button type="button" class="btn btn-outline-primary editBarButton">New</button>
-  </div>
-  <div class="col-md-2 text-center">
-    <button type="button" class="btn btn-outline-primary editBarButton">Edit</button>
-  </div>
-  <form class="form-inline col-md-8 justify-content-center">
-    <input type="text" class="form-control col-md-8 mx-2" id="search" placeholder="Search">
-    <button type="submit" class="btn btn-outline-primary col-md-2 mx-2">Search</button>
-  </form>
-</div>
+<form class="form-inline justify-content-center p-2">
+  <button type="button" class="btn btn-outline-primary form-control col-md-2 mx-3">New</button>
+  <button type="button" class="btn btn-outline-primary form-control col-md-2 mx-3">Edit</button>
+  <input type="text" class="form-control col-md-4 mx-3" id="search" placeholder="Search">
+  <button type="submit" class="btn btn-outline-primary col-md-2 mx-3">Search</button>
+</form>
