more work on employee page

--- a/Client/src/app/crudbar/crudbar.component.html
+++ b/Client/src/app/crudbar/crudbar.component.html
@@ -1,6 +1,6 @@
 <form class="form-inline justify-content-center p-2">
   <button type="button" class="btn btn-outline-primary form-control col-md-2 mx-3">New</button>
-  <button type="button" class="btn btn-outline-primary form-control col-md-2 mx-3">Edit</button>
+  <button type="button" class="btn btn-outline-primary form-control col-md-2 mx-3" (click)="editBtnClicked()">Edit</button>
   <input type="text" class="form-control col-md-4 mx-3" id="search" placeholder="Search">
   <button type="submit" class="btn btn-outline-primary col-md-2 mx-3">Search</button>
 </form>
