small changes to crudbar eventing

--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -1,4 +1,4 @@
-<app-crudbar (editWasClicked)="onEditClicked()"></app-crudbar>
+<app-crudbar (editStateChanged)="onEditStateChanged($event)"></app-crudbar>
 <div class="p-5">
   <form>
     <div class="form-group row">
