added indexes, added routing (without guard), added empty auth service

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-nav></app-nav>
-<!-- <app-products></app-products> -->
-<app-employees></app-employees>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
