--- a/Client/src/app/core/nav/nav.component.html
+++ b/Client/src/app/core/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-4">
-    <a class="navbar-brand" href="#">CLERP</a>
+    <a class="navbar-brand" routerLink="/">CLERP</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Products</a>
+          <a class="nav-link" routerLink="/products">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Orders</a>
+          <a class="nav-link" routerLink="/orders">Orders</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Business Partners</a>
+            <a class="nav-link" routerLink="/businessPartners">Business Partners</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Employees</a>
+            <a class="nav-link" routerLink="/employees">Employees</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
