--- a/Client/src/app/products/productDetail/productDetail.component.html
+++ b/Client/src/app/products/productDetail/productDetail.component.html
@@ -1,30 +1,31 @@
+<app-crudbar (EditStarted)="onEditStarted($event)" (EditCanceled)="onEditCanceled($event)" (EditNew)="onEditNew($event)" (EditStarted)="onEditStarted($event)"></app-crudbar>
 <img id="productImage" class="image-fluid rounded fit-image" src="data:image/png;base64,{{product.Image}}"
     alt="Product Image">
 
 <div class="form-group row">
     <label for="productName" class="col-md-3 col-form-label text-left">Product Name</label>
     <div class="col-md-9">
-        <input type="text" class="form-control" id="productName" value="{{product.Name}}" disabled={{!isEditing}}>
+        <input type="text" class="form-control" id="productName" [(ngModel)]="product.Name" [disabled]="!isEditing">
     </div>
 </div>
 
 <div class="form-group row">
     <label for="ean" class="col-md-3 col-form-label text-left">EAN</label>
     <div class="col-md-9">
-        <input type="number" class="form-control" id="ean" value="{{product.EAN}}" disabled={{!isEditing}}>
+        <input type="number" class="form-control" id="ean" [(ngModel)]="product.EAN" [disabled]="!isEditing">
     </div>
 </div>
 
 <div class="form-group row">
     <label for="price" class="col-md-3 col-form-label text-left">Price</label>
     <div class="col-md-9">
-        <input type="number" class="form-control" id="price" value="{{product.Price}}" disabled={{!isEditing}}>
+        <input type="number" class="form-control" id="price" [(ngModel)]="product.Price" [disabled]="!isEditing">
     </div>
 </div>
 
 <div class="form-group row">
     <label for="description" class="col-md-3 col-form-label text-left">Description</label>
     <div class="col-md-9">
-        <textarea class="form-control" id="description" rows="4" disabled={{!isEditing}}>{{product.Description}}</textarea>
+        <textarea class="form-control" id="description" rows="4" [(ngModel)]="product.Description" [disabled]="!isEditing"></textarea>
     </div>
 </div>
