added guards, added jwt and error injectables, create employee functional

--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -1,4 +1,4 @@
-<app-crudbar (EditStarted)="onEditStarted($event)" (EditCanceled)="onEditCanceled($event)" (EditNew)="onEditNew($event)" (EditStarted)="onEditStarted($event)"></app-crudbar>
+<app-crudbar (EditStarted)="onEditStarted($event)" (EditCanceled)="onEditCanceled($event)" (EditNew)="onEditNew($event)" (EditSaved)="onEditSaved($event)"></app-crudbar>
 <div class="p-5">
   <form>
     <div class="form-group row">
