--- a/Client/src/app/core/nav/nav.component.html
+++ b/Client/src/app/core/nav/nav.component.html
@@ -6,23 +6,29 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item active" *ngIf='currentUser'>
           <a class="nav-link" routerLink="/products">Products</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf='currentUser'>
           <a class="nav-link" routerLink="/orders">Orders</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf='currentUser'>
             <a class="nav-link" routerLink="/businessPartners">Business Partners</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/employees">Employees</a>
+            <a class="nav-link" *ngIf="isAdmin" routerLink="/employees">Employees</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0" *ngIf="!currentUser; else loggedIn">
         <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username" [(ngModel)]="username" name="username">
         <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password" [(ngModel)]="password" name="password">
         <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit" (click)="loginClicked()">Login</button>
       </form>
+      <ng-template #loggedIn>
+        <div class="my-2 my-lg-0">
+          Welcome {{currentUser.Username}}
+        <button class="btn btn-outline-secondary m-2 my-sm-0" (click)="logoutClicked()">Logout</button>
+        </div>
+      </ng-template>
     </div>
   </nav>
