--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<h1>CLERP HOME</h1>
+<div class="mt-5">
+    <h1 class="display-1 text-center">CLERP</h1>
+    <h3 class="text-center">Clever Enterprise Resource Planing</h3>
+    <p class="mt-5 text-center">
+        The up and coming solution for all your resource planing needs.
+    </p>
+</div>
