--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -1,3 +1,65 @@
+<app-crudbar (EditStarted)="onEditStarted()" (EditCanceled)="onEditCanceled()" (EditNew)="onEditNew()" (EditSaved)="onEditSaved()"></app-crudbar>
+<div class="p-5">
+  <form [formGroup]="employeeForm">
+    <div class="form-group row">
+      <label for="username" class="col-sm-2 col-form-label">Username</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="password" class="col-sm-2 col-form-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="firstname" class="col-sm-2 col-form-label">Firstname</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="lastname" class="col-sm-2 col-form-label">Lastname</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="email" class="col-sm-2 col-form-label">Email</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="phonenr" class="col-sm-2 col-form-label">Phone Number</label>
+      <div class="col-sm-10">
+        <input type="tel" class="form-control" formControlName="phoneNumber" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="birthday" class="col-sm-2 col-form-label">Date of Birth</label>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="birthday" ngbDatepicker
+            #d="ngbDatepicker" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+
+
+<!-- 
 <app-crudbar (EditStarted)="onEditStarted($event)" (EditCanceled)="onEditCanceled($event)" (EditNew)="onEditNew($event)" (EditSaved)="onEditSaved($event)"></app-crudbar>
 <div class="p-5">
   <form>
@@ -52,7 +114,6 @@
     <div class="form-group row">
       <label for="birthday" class="col-sm-2 col-form-label">Date of Birth</label>
       <div class="col-sm-10">
-        <!-- <input type="date" class="form-control" id="birthday" [disabled]="!isEditing" name="birthday" [(ngModel)]="employee.Birthday"> -->
         <div class="input-group">
           <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="employee.Birthday" ngbDatepicker
             #d="ngbDatepicker" [disabled]="!isEditing">
@@ -63,4 +124,4 @@
       </div>
     </div>
   </form>
-</div>
+</div> -->
