--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -1,127 +1,10 @@
-<app-crudbar (EditStarted)="onEditStarted()" (EditCanceled)="onEditCanceled()" (EditNew)="onEditNew()" (EditSaved)="onEditSaved()"></app-crudbar>
-<div class="p-5">
-  <form [formGroup]="employeeForm">
-    <div class="form-group row">
-      <label for="username" class="col-sm-2 col-form-label">Username</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="password" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="firstname" class="col-sm-2 col-form-label">Firstname</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="lastname" class="col-sm-2 col-form-label">Lastname</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="email" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="phonenr" class="col-sm-2 col-form-label">Phone Number</label>
-      <div class="col-sm-10">
-        <input type="tel" class="form-control" formControlName="phoneNumber" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="birthday" class="col-sm-2 col-form-label">Date of Birth</label>
-      <div class="col-sm-10">
-        <div class="input-group">
-          <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="birthday" ngbDatepicker
-            #d="ngbDatepicker" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="row justify-content-start mt-4 mb-4">
+  <button type="button" class="btn btn-outline-secondary form-control col-md-2 offset-md-1" >New</button>
+  <form class="form-inline justify-content-around col-md-8">
+    <input class="form-control col-md-8" id="search" placeholder="Search">
+    <button type="submit" class="btn btn-outline-secondary col-md-3">Search</button>
   </form>
 </div>
+<div>
 
-
-<!-- 
-<app-crudbar (EditStarted)="onEditStarted($event)" (EditCanceled)="onEditCanceled($event)" (EditNew)="onEditNew($event)" (EditSaved)="onEditSaved($event)"></app-crudbar>
-<div class="p-5">
-  <form>
-    <div class="form-group row">
-      <label for="username" class="col-sm-2 col-form-label">Username</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="username" [disabled]="!isEditing" name="username"
-          [(ngModel)]="employee.Username">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="password" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" id="password" [disabled]="!isEditing" name="password"
-          [(ngModel)]="employee.Password">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="firstname" class="col-sm-2 col-form-label">Firstname</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="firstname" [disabled]="!isEditing" name="firstname"
-          [(ngModel)]="employee.FirstName">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="lastname" class="col-sm-2 col-form-label">Lastname</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="lastname" [disabled]="!isEditing" name="lastname"
-          [(ngModel)]="employee.LastName">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="email" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="email" [disabled]="!isEditing" name="email"
-          [(ngModel)]="employee.Email">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="phonenr" class="col-sm-2 col-form-label">Phone Number</label>
-      <div class="col-sm-10">
-        <input type="tel" class="form-control" id="phonenr" [disabled]="!isEditing" name="phonenr"
-          [(ngModel)]="employee.PhoneNr">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="birthday" class="col-sm-2 col-form-label">Date of Birth</label>
-      <div class="col-sm-10">
-        <div class="input-group">
-          <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="employee.Birthday" ngbDatepicker
-            #d="ngbDatepicker" [disabled]="!isEditing">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button" [disabled]="!isEditing"></button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </form>
-</div> -->
+</div>
