--- a/Client/src/app/employees/employeeEdit/employeeEdit.component.html
+++ b/Client/src/app/employees/employeeEdit/employeeEdit.component.html
@@ -46,7 +46,7 @@
           <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="birthday" ngbDatepicker
             #d="ngbDatepicker" [ngClass]="{ 'is-invalid': submitted && f.birthday.errors }">
           <div class="input-group-append">
-            <button class="btn btn-outline-secondary calendar form-control" (click)="d.toggle()" type="button"></button>
+            <button class="btn btn-outline-secondary calendar form-control fa fa-calendar" (click)="d.toggle()" type="button"></button>
           </div>
         </div>
       </div>
