--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -9,12 +9,13 @@
   <a class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let e of filteredEmployees"
     [routerLink]="['/employeeEdit', e.id]">
     <div class="row">
-      <div class="col-md-6">First Name: {{e.firstname}}</div>
-      <div class="col-md-6">Last Name: {{e.lastname}}</div>      
+      <div class="col-md-4">First Name: {{e.firstname}}</div>
+      <div class="col-md-4">Last Name: {{e.lastname}}</div>      
+      <div class="col-md-4">Email: {{e.email}}</div>      
     </div>
     <div class="row">
-      <div class="col-md-6">Birthday: {{e.birthday | date : 'yyyy-MM-dd'}}</div>
-      <div class="col-md-6">Username: {{e.username}}</div>      
+      <div class="col-md-4">Birthday: {{e.birthday | date : 'yyyy-MM-dd'}}</div>
+      <div class="col-md-4">Username: {{e.username}}</div>      
     </div>
   </a>
 </div>
