productDetail update done

--- a/Client/src/app/employees/employeeCreate/employeeCreate.component.html
+++ b/Client/src/app/employees/employeeCreate/employeeCreate.component.html
@@ -49,7 +49,7 @@
             <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="birthday" ngbDatepicker
               #d="ngbDatepicker" [ngClass]="{ 'is-invalid': submitted && f.birthday.errors }">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+              <button class="btn btn-outline-secondary calendar fa fa-calendar" (click)="d.toggle()" type="button"></button>
             </div>
           </div>
         </div>
