--- a/Client/src/app/products/productDetailOverview/productDetailOverview.component.html
+++ b/Client/src/app/products/productDetailOverview/productDetailOverview.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-6 p-5">
-    <app-productDetail></app-productDetail>
+    <app-productDetail [id]="id"></app-productDetail>
   </div>
   <div class="col-md-6 p-5">
-    <app-productList></app-productList>
+    <app-productList [id]="id"></app-productList>
   </div>
 </div>
