--- a/Client/src/app/employees/employeeCreate/employeeCreate.component.html
+++ b/Client/src/app/employees/employeeCreate/employeeCreate.component.html
@@ -84,7 +84,6 @@
           </label>
         </div>
       </div>
-
     </div>
 
     <div class="form-group row">
@@ -100,7 +99,7 @@
 
 
 
-<ng-template #modalSuccessContent let-modal>
+<!-- <ng-template #modalSuccessContent let-modal>
   <div class="modal-header">
     <h4 class="modal-title">Success</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
@@ -128,4 +127,4 @@
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-secondary" (click)="modal.close('Close click')">Close</button>
   </div>
-</ng-template>
+</ng-template> -->
