--- a/Client/src/app/employees/employeeEdit/employeeEdit.component.html
+++ b/Client/src/app/employees/employeeEdit/employeeEdit.component.html
@@ -53,6 +53,30 @@
     </div>
 
     <div class="form-group row">
+      <label for="department" class="col-md-2 col-form-label">Department</label>
+      <div class="col-md-10">
+        <select class="form-control" formControlName="department"
+          [ngClass]="{ 'is-invalid': submitted && f.department.errors }">
+          <option *ngFor="let department of departments" [ngValue]="department">
+            {{department.title}}
+          </option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="checkbox" class="col-md-2 col-form-label">Roles</label>
+      <div class="col-md-10">
+        <div class="row pl-3" *ngFor="let role of employeeForm.controls['roles'].controls; let i = index">
+          <label formArrayName="roles">
+            <input type="checkbox" [formControlName]="i">
+            {{roles[i].name}}
+          </label>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group row">
       <div class="col-md-10 offset-2">
         <div class="row justify-content-between px-3">
           <button *ngIf="!isEditing" type="button" class="btn btn-outline-secondary col-md-4"
