--- a/Client/src/app/employees/employees.component.html
+++ b/Client/src/app/employees/employees.component.html
@@ -6,9 +6,8 @@
   </form>
 </div>
 <div class="list-group list-group-flush">
-  <a class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let e of filteredEmployees"
-    [routerLink]="['/employeeEdit', e.id]">
-    <div class="card">
+  <div class="card d-flex flex-row justify-content-end" *ngFor="let e of filteredEmployees">
+    <a class="card-body text-dark card-link " [routerLink]="['/employeeEdit', e.id]">
       <div class="row">
         <div class="col-md-4">First Name: {{e.firstname}}</div>
         <div class="col-md-4">Last Name: {{e.lastname}}</div>
@@ -18,6 +17,9 @@
         <div class="col-md-4">Birthday: {{e.birthday | date : 'yyyy-MM-dd'}}</div>
         <div class="col-md-4">Username: {{e.username}}</div>
       </div>
+    </a>
+    <div class="card-footer">
+      <button class="btn btn-outline-secondary h-100" (click)="deleteClicked(e.id)">Delete</button>
     </div>
-  </a>
+  </div>
 </div>
