create productType with image

--- a/Client/src/app/products/products.component.html
+++ b/Client/src/app/products/products.component.html
@@ -8,10 +8,10 @@
 <div class="list-group list-group-flush">
   <a class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let p of filteredProducts"
     [routerLink]="['/productDetailOverview', p.id]">
-    <div style="height: 12em;" class="card">
+    <div style="height: 10em;" class="card">
       <div class="row ">
         <div class="col-md-2">
-            <img src="data:image/png;base64,{{p.Image}}" class="image-fluid rounded fit-image">
+            <img src="data:image/png;base64,{{p.imageBase64}}" class="image-fluid rounded fit-image w-100">
           </div>
           <div class="col-md-10 px-3">
             <div class="card-block px-3">
@@ -20,7 +20,7 @@
                 <p class="col-md-6 card-text"><b>EAN:</b> {{p.ean}}</p>
                 <p class="col-md-6 card-text"><b>Price:</b> {{p.price | number: '1.2'}}</p>
               </div>
-              <p class="card-text">{{p.Description}}</p>
+              <p class="card-text"><b>Description: </b>{{p.Description}}</p>
             </div>
           </div>
 
