--- a/Client/src/app/products/productCreate/productCreate.component.html
+++ b/Client/src/app/products/productCreate/productCreate.component.html
@@ -1,8 +1,13 @@
 <div class="p-5">
-  <img id="productImage" class="image-fluid rounded fit-image" src="data:image/png;base64,{{product.Image}}"
-    alt="Product Image">
-
   <form [formGroup]="productTypeForm">
+    <input style="display: none" type="file" class="form-control" formControlName="image"
+      (change)="onFileChanged($event)" [ngClass]="{ 'is-invalid': submitted && f.productName.errors }" #fileInput>
+
+    <div class="form-group row">
+      <img id="productImage" class="image-fluid rounded fit-image p-3 h-100" src="data:image/png;base64,{{f.image.value}}"
+        onError="this.src='./assets/images/noImageFound.gif';" alt="Product Image" (click)="fileInput.click()">
+    </div>
+
     <div class="form-group row">
       <label for="productName" class="col-md-3 col-form-label text-left">Product Name</label>
       <div class="col-md-9">
@@ -22,7 +27,7 @@
     <div class="form-group row">
       <label for="price" class="col-md-3 col-form-label text-left">Price</label>
       <div class="col-md-9">
-        <input type="number" class="form-control" [value]="productTypeForm.get('price').value.toFixed(2)" step="0.01"
+        <input type="number" class="form-control" [value]="productTypeForm.get('price').value" step="0.01"
           formControlName="price" [ngClass]="{ 'is-invalid': submitted && f.price.errors }">
       </div>
     </div>
@@ -46,36 +51,3 @@
     </div>
   </form>
 </div>
-
-
-
-
-<ng-template #modalSuccessContent let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title">Success</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <p>Product was created succesfully.</p>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.close('Close click')">Close</button>
-  </div>
-</ng-template>
-
-<ng-template #modalErrorContent let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title">Error</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <p>product creation has encountered an error.</p>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.close('Close click')">Close</button>
-  </div>
-</ng-template>
