--- a/Client/src/app/products/productCreate/productCreate.component.html
+++ b/Client/src/app/products/productCreate/productCreate.component.html
@@ -4,7 +4,7 @@
       (change)="onFileChanged($event)" [ngClass]="{ 'is-invalid': submitted && f.productName.errors }" #fileInput>
 
     <div class="form-group row">
-      <img id="productImage" class="image-fluid rounded fit-image p-3 h-100" src="data:image/png;base64,{{f.image.value}}"
+      <img style="max-height: 15em" id="productImage" class="image-fluid rounded fit-image p-3 offset-3 h-100" src="data:image/png;base64,{{f.image.value}}"
         onError="this.src='./assets/images/noImageFound.gif';" alt="Product Image" (click)="fileInput.click()">
     </div>
 
@@ -45,7 +45,7 @@
       <div class="col-md-9 offset-3">
         <div class="row justify-content-between px-3">
           <button type="button" class="btn btn-outline-secondary col-md-4" (click)="createClicked()">Create</button>
-          <a class="btn btn-outline-secondary col-md-4" [routerLink]="'/employees'">Back</a>
+          <a class="btn btn-outline-secondary col-md-4" [routerLink]="'/products'">Back</a>
         </div>
       </div>
     </div>
