--- a/Client/src/app/products/productDetailOverview/productDetail/productDetail.component.html
+++ b/Client/src/app/products/productDetailOverview/productDetail/productDetail.component.html
@@ -17,6 +17,9 @@
           [ngClass]="{ 'is-invalid': submitted && f.productName.errors }">
       </div>
     </div>
+    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && productForm.controls['productName'].errors?.required">Name is required.</div>
+    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && productForm.controls['productName'].errors?.minlength">Minimum length is {{valditationConstants.MinNameLength}}</div>
+    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && productForm.controls['productName'].errors?.maxlength">Maximum length is {{valditationConstants.MaxNameLength}}</div>
 
     <div class="form-group row">
       <label for="ean" class="col-md-3 col-form-label text-left">EAN</label>
@@ -25,6 +28,7 @@
           [ngClass]="{ 'is-invalid': submitted && f.ean.errors }">
       </div>
     </div>
+    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && productForm.controls['ean'].errors?.required">EAN is required.</div>
 
     <div class="form-group row">
       <label for="price" class="col-md-3 col-form-label text-left">Price</label>
@@ -33,6 +37,7 @@
           formControlName="price" [ngClass]="{ 'is-invalid': submitted && f.price.errors }">
       </div>
     </div>
+    <div class="offset-3 px-3 form-group row text-danger" *ngIf="submitted && productForm.controls['price'].errors?.required">Price is required.</div>
 
     <div class="form-group row">
       <label for="description" class="col-md-3 col-form-label text-left">Description</label>
