--- a/Client/src/app/core/nav/nav.component.html
+++ b/Client/src/app/core/nav/nav.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active" *ngIf='currentUser'>
-          <a class="nav-link" routerLink="/products">Products</a>
+          <a class="nav-link" routerLink="/productTypes">ProductTypes</a>
         </li>
         <li class="nav-item" *ngIf='currentUser'>
           <a class="nav-link" routerLink="/orders">Orders</a>
