--- a/Client/src/app/productTypes/productTypeDetailOverview/productTypeDetailOverview.component.html
+++ b/Client/src/app/productTypes/productTypeDetailOverview/productTypeDetailOverview.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-6 p-5">
-    <app-productDetail></app-productDetail>
+    <app-productTypeDetail></app-productTypeDetail>
   </div>
   <div class="col-md-6 p-5">
-    <app-productList></app-productList>
+    <app-productTypeList></app-productTypeList>
   </div>
 </div>
