--- a/Client/src/app/productTypes/productTypes.component.html
+++ b/Client/src/app/productTypes/productTypes.component.html
@@ -1,13 +1,13 @@
 <div class="row justify-content-start mt-4 mb-4">
-  <a [routerLink]="['/productCreate']" class="btn btn-outline-secondary form-control col-md-2 offset-md-1">New</a>
+  <a [routerLink]="['/productTypeCreate']" class="btn btn-outline-secondary form-control col-md-2 offset-md-1">New</a>
   <form class="form-inline justify-content-around col-md-8">
     <input class="form-control col-md-8" [formControl]="searchControl" placeholder="Search">
     <button type="submit" class="btn btn-outline-secondary col-md-3" (click)="searchClicked()">Search</button>
   </form>
 </div>
 <div class="list-group list-group-flush">
-  <a class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let p of filteredProducts"
-    [routerLink]="['/productDetailOverview', p.id]">
+  <a class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let p of filteredProductTypes"
+    [routerLink]="['/productTypeDetailOverview', p.id]">
     <div class="card">
       <div class="row">
         <div class="col-md-2 text-center">
