--- a/Client/src/app/productTypes/productTypeDetailOverview/productTypeDetail/productTypeDetail.component.html
+++ b/Client/src/app/productTypes/productTypeDetailOverview/productTypeDetail/productTypeDetail.component.html
@@ -1,6 +1,6 @@
 <div class="p-5">
   <form [formGroup]="productTypeForm">
-    <input style="display: none" type="file" accept="image/*" class="form-control" (change)="preview(file.files)" #file>
+    <input style="display: none" type="file" accept="image/*" class="form-control" (change)="preview(file.files)" [disabled]="productTypeForm.disabled" #file>
 
     <div class="form-group row">
       <img style="max-height: 15em" id="productImage" class="image-fluid rounded fit-image p-3 offset-3 h-100"
@@ -65,36 +65,3 @@
     </div>
   </form>
 </div>
-
-
-
-
-<ng-template #modalSuccessContent let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title">Success</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <p>Product was updated succesfully.</p>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.close('Close click')">Close</button>
-  </div>
-</ng-template>
-
-<ng-template #modalErrorContent let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title">Error</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <p>product update has encountered an error.</p>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.close('Close click')">Close</button>
-  </div>
-</ng-template>
